# football-analysis

./: .gitignore  API_DOCUMENTATION.md  API_WORKFLOW_GUIDE.md  ENHANCED_VIDEO_ANALYSIS_FEATURES.md  FRONTEND_INTEGRATION.md  GITHUB_SETUP_GUIDE.md  GRADING_AUTO_DETECTION.md  HOW_TO_VISUALIZE_VIDEO.md  OPENAI_OPTIMIZATION_SUMMARY.md  README-API.md  START_HERE.md  VERIFY_ENV_EXCLUDED.md  VIDEO_ANALYSIS_VERIFICATION.md  install_dependencies.bat  pyproject.toml  requirements-api-minimal.txt  requirements-api.txt  run_api.bat  run_api.sh  start_api.bat  start_server.bat  test_api.py  test_api_complete.py  test_video_analysis.py
Bird's eye view/: main.py
Bird's eye view/deep_sort_pytorch/deep_sort/: deep_sort.py
Bird's eye view/deep_sort_pytorch/deep_sort/deep/: feature_extractor.py
Bird's eye view/elements/: deep_sort.py
api/: __init__.py  main.py
api/core/: config.py
api/models/: schemas.py
api/routers/: analysis.py  examples.py  grading.py  health.py
api/services/: ai_grader.py  model_loader.py  video_analyzer.py  video_storage.py  video_visualizer.py
