[project]
name = "football-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "easydict>=1.10",
    "fastapi==0.104.1",
    "matplotlib>=3.5.0",
    "numpy>=1.24.0",
    "openai>=1.12.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyflann-py3>=0.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "scipy>=1.7.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.64.0",
    "uvicorn[standard]==0.24.0",
]
